# tgbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
devops/: Dockerfile
newsletter/: main.py
newsletter/application/newsletters/: controllers.py  ports.py
newsletter/application/users/: controllers.py  ports.py
newsletter/core/: config.py
newsletter/domain/: exceptions.py
newsletter/domain/newsletters/: dtos.py  exceptions.py  models.py
newsletter/domain/users/: constants.py  exceptions.py  models.py
newsletter/infrastructure/db/: postres.py
newsletter/infrastructure/db/migrations/: env.py
newsletter/infrastructure/db/migrations/versions/: d740cc1b244d_2.py  ddbb2d9bcc86_init.py
newsletter/infrastructure/db/models/: __init__.py  newsletters.py  users.py
newsletter/infrastructure/db/storages/: newsletters.py  users.py
newsletter/infrastructure/dramatiq/: tasks.py
newsletter/infrastructure/tg_bot/: bot.py  constants.py  dependencies.py  keyboards.py
newsletter/infrastructure/tg_bot/newsletters/: dependencies.py  routes.py
newsletter/infrastructure/tg_bot/users/: dependencies.py  factory_text.py  routes.py
newsletter/utils/: datetime.py  logging.py
